# scan_pose_gt_generation

./: CMakeLists.txt  README.md  package.xml
config/: T_World_GtCloud_example.json  T_World_GtCloud_identity.json  config_example.json  config_example2.json  extrinsics_example.json  initial_trajectory_example.json  initial_trajectory_example1.json
include/scan_pose_gt_generation/: ScanPoseGtGeneration.h
src/: ScanPoseGtGeneration.cpp  results_visualizer.cpp  run_gt_generation.cpp
