<?xml version="1.0"?>
<package format="2">
  <name>scan_pose_gt_generation</name>
  <version>0.1.0</version>
  <description>tool for getting ground truth poses of lidar scans by registering to a high quality cloud</description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  
</package>
